# zero2prod

./: .gitignore  Cargo.toml  README.md  configuration.yaml
migrations/: 20230712020149_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
