[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[dependencies]
actix-web = "4"
config = "=0.13"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.18"
